--- a/HTML_Components/header.html
+++ b/HTML_Components/header.html
@@ -2,5 +2,5 @@
     <a href="/">Home</a>
     <a href="/registraEsercizio.php">Registra esercizio</a>
     <a href="/visualizzaProgramma.php">Visualizza programma</a>
-    <a>Inizia Allenamento</a>
+    <a href="/iniziaAllenamento.php">Inizia Allenamento</a>
 </header>
